packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart


  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_rust_bufferPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_rust_buffer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_rust_buffer =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_rust_bufferPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_void(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_void(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_voidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_void');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_void =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_voidPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_void(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_void(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_voidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_void');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_void =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_voidPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_void(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_void(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_voidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_void');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_void =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_voidPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_complete_void(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_void(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_voidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_void');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_void =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_voidPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  int uniffi_breez_sdk_liquid_bindings_checksum_func_connect() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_func_connect();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_connectPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_func_connect');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_connect =
      _uniffi_breez_sdk_liquid_bindings_checksum_func_connectPtr.asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_func_default_config() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_func_default_config();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_default_configPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_func_default_config');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_default_config =
      _uniffi_breez_sdk_liquid_bindings_checksum_func_default_configPtr.asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_func_parse() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_func_parse();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_parsePtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_func_parse');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_parse =
      _uniffi_breez_sdk_liquid_bindings_checksum_func_parsePtr.asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_func_parse_invoice() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_func_parse_invoice();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_parse_invoicePtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_func_parse_invoice');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_parse_invoice =
      _uniffi_breez_sdk_liquid_bindings_checksum_func_parse_invoicePtr.asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_func_set_logger() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_func_set_logger();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_set_loggerPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_func_set_logger');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_func_set_logger =
      _uniffi_breez_sdk_liquid_bindings_checksum_func_set_loggerPtr.asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_add_event_listener() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_add_event_listener();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_add_event_listenerPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_add_event_listener');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_add_event_listener =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_add_event_listenerPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_backup() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_backup();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_backupPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_backup');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_backup =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_backupPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_buy_bitcoin() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_buy_bitcoin();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_buy_bitcoinPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_buy_bitcoin');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_buy_bitcoin =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_buy_bitcoinPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_check_message() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_check_message();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_check_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_check_message');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_check_message =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_check_messagePtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_disconnect() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_disconnect();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_disconnectPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_disconnect');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_disconnect =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_disconnectPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_fiat_rates() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_fiat_rates();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_fiat_ratesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_fiat_rates');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_fiat_rates =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_fiat_ratesPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_lightning_limits() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_lightning_limits();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_lightning_limitsPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_lightning_limits');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_lightning_limits =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_lightning_limitsPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_onchain_limits() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_onchain_limits();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_onchain_limitsPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_onchain_limits');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_onchain_limits =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_fetch_onchain_limitsPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_get_info() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_get_info();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_get_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_get_info');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_get_info =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_get_infoPtr
          .asFunction<int Function()>();
